# dbrice

./: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/prompts/: DBrice-prompt.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  connections.rs  dashboard.rs  export.rs  import.rs  logs.rs  mod.rs  mysql.rs  routines.rs  schema.rs  settings.rs  ssh.rs  users.rs
src-tauri/src/crypto/: aes.rs  keychain.rs  mod.rs
src-tauri/src/db/: local.rs  schema.sql
src-tauri/src/models/: connection.rs  query.rs  schema.rs
src-tauri/src/ssh/: tunnel.rs
src/components/common/: ConfirmModal.tsx  ReconnectBanner.tsx  Toast.tsx  UnsavedChangesModal.tsx  UpdateBanner.tsx
src/components/connections/: ColorPickerInput.tsx  ConnectionCard.tsx  ConnectionFormModal.tsx  FolderCard.tsx  (+2 more)
src/hooks/: useAutoComplete.ts  useConnectionStatus.ts  useDashboardPolling.ts  useMysqlQuery.ts
src/lib/: tauri.ts  utils.ts
src/pages/: HomePage.tsx  LoginPage.tsx  OnboardingPage.tsx  WorkspacePage.tsx
src/stores/: useAuthStore.ts  useConnectionStore.ts  useQueryHistoryStore.ts  useSessionStore.ts  useSettingsStore.ts  useTabStore.ts
src/types/: connection.ts  mysql.ts  schema.ts  settings.ts
tests/frontend/: AuthFlow.test.tsx  ConnectionForm.test.tsx  ResultGrid.test.tsx  SqlEditor.test.tsx  setup.ts
tests/integration/: docker-compose.yml  export_import.rs  integration_tests.rs  mysql_connection.rs  query_execution.rs  schema_operations.rs  ssh_tunnel.rs  user_management.rs
(+22 files in other folders)
