[package]
name = "dbrice"
version = "1.0.0"
description = "DBrice — Modern MySQL Client"
authors = ["DBrice"]
license = "MIT"
repository = "https://github.com/bricemab/dbrice"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dbrice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbrice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# MySQL
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid"] }

# SQLite local storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }

# SSH
ssh2 = { version = "0.9" }

# Async utils
futures = "0.3"
once_cell = "1"

[[test]]
name = "integration_tests"
path = "../tests/integration/integration_tests.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
